--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,10 +1,16 @@
 @import "{{ site.theme }}";
 @import url('https://fonts.googleapis.com/css?family=Lato|Merriweather|Montserrat&display=swap');
-* {
+*, a {
   font-family: "Merriweather";
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat";
+}
+
+#main-content {
+  h1,h2,h3,h4,h5,h6 {
+    font-family: "Montserrat";
+  }
 }
 
