added developers link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -180,6 +180,9 @@ ga('send', 'pageview');
                 <a class="btn btn-heading" href="{{ site.baseurl }}/ideas">Ideas</a>
                 {% endif %}
 
+                <a class="btn btn-heading" target="_blank" href="https://unstabledesign.github.io/AdaCAD/">Developers</a>
+           
+
         </div>
       
 </div>
