fix typos and add direct links to adacad

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ post_class: post-template
 
             {% if page.file %}
                     <h6>AdaCAD File</h6>
-                    <a target="_blank" class="btn btn-warning" href="{{site.baseurl}}/{{ page.file }}">Download the .ada File</a>
+                    <a target="_blank" class="btn btn-warning" href="http://adacad.org/{{ page.file }}">Open this File in AdaCAD</a>
 
 
                
