new adacad link to main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@ ga('send', 'pageview');
     </button>
 
         <div class="create-btn">
-            <a target="_blank" class="btn btn-error" href="https://adacad-weaver.firebaseapp.com/"> Start Drafting</a>
+            <a target="_blank" class="btn btn-error" href="https://adacad.org"> Start Drafting</a>
         </div>
 
     <div class="collapse navbar-collapse" id="navbarMediumish">
