--- a/_layouts/howto.html
+++ b/_layouts/howto.html
@@ -42,7 +42,7 @@ post_class: post-template
 
             {% if page.file %}
                     <h6>AdaCAD File</h6>
-                    <a target="_blank" class="btn btn-warning" href="https://adacad.org/{{ page.file }}">Open in AdaCAD</a>
+                    <a target="_blank" class="btn btn-warning" href="https://adacad.org/?ex={{ page.file }}">Open in AdaCAD</a>
 
 
                
