--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ post_class: post-template
 
             {% if page.file %}
                     <h6>AdaCAD File</h6>
-                    <a target="_blank" class="btn btn-warning" href="https://adacad.org/{{ page.file }}">Open this File in AdaCAD</a>
+                    <a target="_blank" class="btn btn-warning" href="https://adacad.org/?ex={{ page.file }}">Open this File in AdaCAD</a>
 
 
                
